Start time speed slider at 25% instead of 50%
Lock in alpha values for cartoon mapping when gravity is disabled, this preserves linear motion
# 0.0.16 (48116) Jan 19, 2011
Fixed: stored 'rewind' values get reset during step and rewind
# 0.0.15 (48082) Jan 18, 2011
Update force vectors when gravity gets toggled on and off, otherwise displayed value won't update
If any of the rewind properties changes while the clock is paused, set a rewind point for all of them
simsharing: Save and restore window size
simsharing: Don't run physics on teacher machine, fixes stuttering
simsharing: Restore bodies after collision
Reset grid visibility on reset all
Reset measuring tape on reset all
simsharing: Save and restore measuring tape visibility and location
simsharing: Save and restore scale property
simsharing: Save and restore "show grid" property
simsharing: Save and restore selected mode
Modified the cartoon offset scales for Earth/Satellite mode so that inter-body distance remains the same in cartoon as in real scales
# 0.0.14 (47788) Jan 8, 2011
Fixed: dragging an object through a collision still leaves a path drawn, solved by stopping the path after collision
Fixed: "return body" after a collision causes a jump in the path drawn, solved by clearing the path after "return body"
# 0.0.13 (47777) Jan 7, 2011
Added a grid
Added a "return object" button that allows the user to bring back a destroyed or lost object
Improved drag handling by converting to a 1-D bisection root finding algorithm for inverting cartoon mapping
Made checkbox-gray out a windows specific fix
Moved "on" and "off" strings from phetcommon game mode to gravity and orbits
Fixed: If you change the values of a system like the mass, or position and then press "Earth values", some force vectors are missing.
Removed application specific overrides for adding antialiasing
Added horizontal space between gravity control label and on/off buttons
change Gravity control to a pair of on/off buttons