@@ -1,27 +1,19 @@
 // Copyright 2002-2011, University of Colorado
 package edu.colorado.phet.common.piccolophet.nodes.mediabuttons;
 
-import java.awt.Color;
-
-import javax.swing.event.ChangeEvent;
-import javax.swing.event.ChangeListener;
+import java.awt.*;
 
 import edu.colorado.phet.common.phetcommon.model.Property;
 import edu.colorado.phet.common.phetcommon.model.SettableProperty;
 import edu.colorado.phet.common.phetcommon.model.clock.ClockAdapter;
 import edu.colorado.phet.common.phetcommon.model.clock.ClockEvent;
-import edu.colorado.phet.common.phetcommon.model.clock.ConstantDtClock;
 import edu.colorado.phet.common.phetcommon.model.clock.IClock;
-import edu.colorado.phet.common.phetcommon.resources.PhetCommonResources;
 import edu.colorado.phet.common.phetcommon.util.Function1;
 import edu.colorado.phet.common.phetcommon.util.SimpleObserver;
 import edu.colorado.phet.common.phetcommon.util.VoidFunction0;
-import edu.colorado.phet.common.phetcommon.view.clock.TimeSpeedSlider;
 import edu.colorado.phet.common.phetcommon.view.util.PhetFont;
-import edu.colorado.phet.common.phetcommon.view.util.SwingUtils;
 import edu.umd.cs.piccolo.PNode;
 import edu.umd.cs.piccolo.nodes.PText;
-import edu.umd.cs.piccolox.pswing.PSwing;
 
 /**
  * Shows the play/pause button and step button without a container, useful when the
@@ -120,7 +112,7 @@ public class FloatingClockControlNode extends PNode {
      * panel.  It provides a consistent look and feel as well as a default
      * location to the left of the play button.
      */
-    public class FloatingRewindButton extends RewindButton{
+    public class FloatingRewindButton extends RewindButton {
 
         public FloatingRewindButton() {
             super( 60 );
@@ -137,58 +129,4 @@ public class FloatingClockControlNode extends PNode {
         }
     }
 
-    /**
-     * This class should be used when adding a speed slider to the floating
-     * clock control.  It provides the wrapper around a swing slider, hooks
-     * up the clock, and sets the initial position.
-     */
-    public class FloatingTimeSpeedSlider extends PNode {
-
-        private final TimeSpeedSlider timeSpeedSlider;
-
-        /**
-         * Constructor.  This assumes a default range of clock speeds based on
-         * the current (which is presumably the default) clock dt setting.
-         *
-         * @param clock - Clock to be controlled.
-         * @param maxPosX - The maximum x value within the floating clock control
-         * node, which may be the left edge of the rewind button (if present)
-         * or the left edge of the play button.
-         */
-        public FloatingTimeSpeedSlider( final ConstantDtClock clock, double maxPosX ) {
-            final double min = clock.getDt() / 10;
-            final double max = clock.getDt() * 2;
-            timeSpeedSlider = new TimeSpeedSlider( min, max, "0", clock,
-                    PhetCommonResources.getString( "Common.sim.speed" ), Color.WHITE );
-            timeSpeedSlider.addChangeListener( new ChangeListener() {
-                public void stateChanged( ChangeEvent e ) {
-                    clock.setDt( timeSpeedSlider.getValue() );
-                }
-            });
-            PSwing timeSpeedSliderNode = new PSwing( timeSpeedSlider );
-            timeSpeedSliderNode.setOffset( maxPosX - timeSpeedSliderNode.getFullBoundsReference().width, 0 );
-            addChild( timeSpeedSliderNode );
-        }
-
-        /**
-         * Set the background color of all components that comprise this node.
-         * @param backgroundColor
-         * @return
-         */
-        public void setBackgroundColor( Color backgroundColor ){
-            SwingUtils.setBackgroundDeep( timeSpeedSlider, new Color(0, 0, 0, 0) );
-        }
-
-        public double getMin() {
-            return timeSpeedSlider.getMin();
-        }
-
-        public double getMax() {
-            return timeSpeedSlider.getMax();
-        }
-
-        public void setValue( double v ) {
-            timeSpeedSlider.setValue( v );
-        }
-    }
 }
